--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
+        "preline": "^3.1.0",
         "tailwindcss": "^4.1.11",
+        "vanilla-calendar-pro": "^3.0.5",
         "vite": "^6.0"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10"
     }
 }
