--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /.phpunit.cache
 /node_modules
-#/public/hot
-#/public/storage
+/public
+/public/hot
+/public/storage
 /storage/*.key
 /storage/pail
 .env
